adding next.js modularisation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,13 @@
         "target": "es2017",
         "noImplicitAny": true,
         "outDir": "./dist",
-        "sourceMap": true
+        "sourceMap": true,
     },
+    "exclude": [
+        "node_modules"
+    ],
     "include": [
-        "./server/**/*"
+        "**/*.ts",
+        "**/*.tsx"
     ]
 }
