--- a/package.json
+++ b/package.json
@@ -18,14 +18,22 @@
   },
   "homepage": "https://github.com/irwinbraganza/graphql-client-server#readme",
   "dependencies": {
+    "@zeit/next-typescript": "^1.1.1",
     "apollo-server-koa": "^2.6.7",
     "graphql": "^14.4.0",
     "koa": "^2.7.0",
-    "koa-router": "^7.4.0"
+    "koa-graphiql": "^1.1.0",
+    "koa-router": "^7.4.0",
+    "next": "^8.1.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.41",
+    "@types/next": "^8.0.5",
+    "@types/react": "^16.8.22",
+    "@types/react-dom": "^16.8.4",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
