--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/irwinbraganza/graphql-client-server#readme",
   "dependencies": {
+    "@types/lodash": "^4.14.135",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-server-koa": "^2.6.7",
     "graphql": "^14.4.0",
     "koa": "^2.7.0",
     "koa-graphiql": "^1.1.0",
     "koa-router": "^7.4.0",
+    "lodash": "^4.17.11",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
