--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
   "homepage": "https://github.com/irwinbraganza/graphql-client-server#readme",
   "dependencies": {
     "@types/lodash": "^4.14.135",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-server-koa": "^2.6.7",
+    "file-loader": "^4.0.0",
     "graphql": "^14.4.0",
     "koa": "^2.7.0",
     "koa-graphiql": "^1.1.0",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
     "next": "^8.1.0",
+    "next-compose-plugins": "^2.2.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "tabler-react": "^1.30.1",
+    "url-loader": "^2.0.1"
   },
   "devDependencies": {
     "@types/koa": "^2.0.48",
